templates/ingress_production.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-production
  namespace: production
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: guestbook.mstakx.io
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
